# squadify

./: .gitignore  README.md  pyproject.toml  tailwind.config.js  todo.txt
.github/: dependabot.yml
assets/: app.css  package-lock.json  package.json  tailwind.config.js
css/: app.css  package-lock.json  package.json  tailwind.config.js
squadify/: __init__.py  database.py  forms.py  make_collab.py  make_playlist.py  query_spotify.py  routes.py  spotify_api.py  spotify_api_util.py
squadify/static/: app.css  stylesheet.css
squadify/templates/: about.html  add-squad.html  finish-squad.html  finish.html  index.html  new-squad.html  squad-page.html  squad.html  squads-list.html  squads.html
squadify/templates/components/: delete-icon.html  github-logo.html  heart-icon.html  home-image.html  illustration.html  squad-image.html
tests/: test_squadify.py
