[tool.poetry]
name = "squadify"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.6"
spotipy = "^2.17.1"
flask = "^1.1.2"
flask-mongoengine = "^1.0.0"
Flask-Session = "^0.3.2"
flask_wtf = "^0.14.3"
wtforms = "^2.3.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
