[tool.poetry]
name = "squadify"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.6"
spotipy = "^2.18.0"
pymongo = "^4.0.2"
flask = "^2.0.3"
flask_wtf = "^0.15.1"
Flask-Session = "^0.4.0"
wtforms = "^2.3.3"

[tool.poetry.dev-dependencies]
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
